--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "servidor",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "build/index.js",
+  "type": "module",
   "scripts": {
     "check": "tsc --noEmit && echo ✔ Ok",
     "build": "tsc",
@@ -9,8 +10,8 @@
     "dev:dev": "tsx --env-file .env.dev ./src/index.ts",
     "watch": "tsx --watch --env-file .env ./src/index.ts",
     "watch:dev": "tsx --watch --env-file .env.dev ./src/index.ts",
-    "start": "node --env-file .env ./dist/index.js",
-    "start:dev": "node --env-file .env.dev ./dist/index.js",
+    "start": "node --env-file .env ./build/index.js",
+    "start:dev": "node --env-file .env.dev ./build/index.js",
     "test": "jest",
     "test:clear": "jest --clearCache"
   },
@@ -27,6 +28,7 @@
     "mongoose": "^8.4.0",
     "nanoid": "^5.0.8",
     "pg": "^8.11.5",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
     "validator": "^13.12.0"
   },
