--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,5 @@
 PORT= 3060
 DB_URI= mongodb://127.0.0.1:27017/linkhasherdev
 NODE_ENV=development
+JWT_SECRET=hasherSecretKey
+JWT_SECRET_REFRESH=hasherSecretRefreshKey
