--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/autoload": "^6.0.2",
+    "@fastify/cors": "^10.0.1",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.0",
+    "consola": "^3.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "fastify": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "nanoid": "^5.0.8",
-    "pg": "^8.11.5",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
     "validator": "^13.12.0"
@@ -36,17 +39,14 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/pg": "^8.11.6",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
 }
