--- a/package.json
+++ b/package.json
@@ -22,19 +22,23 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.2",
     "@fastify/cors": "^10.0.1",
+    "@fastify/swagger": "^9.4.0",
+    "@fastify/swagger-ui": "^5.1.0",
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.0",
     "consola": "^3.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "fastify": "^5.1.0",
+    "fastify-type-provider-zod": "^4.0.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "nanoid": "^5.0.8",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
